[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'DSSS'
version = 'pre1.0.0'
description = 'SwimmyProject No.1: DocumentSharingSystemInSwimmy(DSSS)'

readme = 'README.md'
license = {file='LICENSE'}

requires-python = '>=3.11'
dependencies = [
]

authors = [
    {name='SwimmyHachioji', email='swimmy_hachioji_001@sai.co.jp'},
    {name='SwimmyTachikawa'},
   {name='AtoKashinoki', email='atokashinoki@gmail.com'}
]
classifiers = [
   'Development Status :: 3 - Alpha',
   'Intended Audience :: Developers',
   'License :: OSI Approved :: MIT License',
   'Natural Language :: Japanese',
   'Operating System :: OS Independent',
   'Programming Language :: Python :: 3.11',
   'Programming Language :: Python :: 3.12',
   'Programming Language :: Python :: 3.13',
   'Programming Language :: Python :: Implementation :: CPython',
   'Topic :: Software Development :: Libraries :: Python Modules',
   'Topic :: Utilities',
]


[project.urls]
'Homepage' = 'https://github.com/swimmy-hachioji/DocumentSharingSystemInSwimmy'
'Bug Traker' = 'https://github.com/swimmy-hachioji/DocumentSharingSystemInSwimmy/issues'


[project.scripts]
